Fix h2 title on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,6 @@ h2 {
     font-weight: 200;
     line-height: .8;
     text-indent: -2px;
-    margin-bottom: .5rem;
     text-transform: uppercase;
 }
 
@@ -952,6 +951,7 @@ footer a:hover {
 @media screen and (max-width: 720px) {
     :root {
         --general-margin: 1rem;
+        --large-txt: calc(2vw + 2rem);
     }
 
     body.home {
@@ -1096,9 +1096,10 @@ footer a:hover {
     }
 
     .project-info h2 {
+        line-height: 1.2;
         padding: var(--general-margin) 0;
         position: absolute;
-        bottom: 4.5rem;
+        bottom: 6rem;
     }
 
     .project .project-info-link {
@@ -1183,7 +1184,7 @@ footer a:hover {
         visibility: visible;
         pointer-events: all;
         position: fixed;
-        bottom: 7.3rem;
+        bottom: 8.8rem;
         right: var(--general-margin);
         z-index: 9;
     }
